--- a/testList/serverless.yml
+++ b/testList/serverless.yml
@@ -5,8 +5,8 @@ provider:
   name: aws
   runtime: python3.6
   region: eu-central-1
-  memorySize: 128
-  timeout: 30
+  memorySize: 516
+  timeout: 500
 
 functions:
   lambda_test_list:
@@ -17,3 +17,4 @@ functions:
           method: get
     layers:
       - ${cf:lambda-tests-layer-dev.FeaturesLayerExport}
+      - ${cf:lambda-selenium-layer-dev.AllureLayerExport}
